--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 body {
     margin: 0;
     font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-    background: linear-gradient(180deg, #042d3b 0%, #012126 100%);
+    background: linear-gradient(180deg, #012c32 0%, #011b23 100%);
     color: #e6eef8;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -255,3 +255,4 @@ body {
         justify-content: center
     }
 }
+
